Finish user edit, update, index, and destroy actions,log in/log out,signup

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<% provide(:title, "About") %>
+<h1>IMB3 Web-Anwendungen Projekt: "EvaLect"</h1>
+<p>
+<ul>
+  <BLOCKQUOTE>Aufgabe: Umsetzung der Anwendung mit gewählter Technologie demonstrieren</BLOCKQUOTE>
+  <BLOCKQUOTE>Projekt: Evaluation von Vorlesungen im Web</BLOCKQUOTE>
+  <BLOCKQUOTE>Technik: Ruby on Rails</BLOCKQUOTE>
+  <BLOCKQUOTE>Authoren: Michelle H. Tim H. Axel D. Torsten M.</BLOCKQUOTE>
+</ul>
+</p>
