--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Registrierung') %>
-<h1>Registrieren</h1>
+<% provide(:title, "Profil-Einstellungen") %>
+<h1>Profil-Einstellungen</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -15,10 +15,15 @@
         <%= f.label :password, "Passwort" %>
         <%= f.password_field :password, class: 'form-control' %>
 
-        <%= f.label :password_confirmation, "Passwort Bestätigung" %>
+        <%= f.label :password_confirmation, "Passwort-Bestätigung" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-        <%= f.submit "Account erstellen", class: "btn btn-primary" %>
+        <%= f.submit "Änderungen speichern", class: "btn btn-primary" %>
     <% end %>
+
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails" target=_blank>change</a>
+    </div>
   </div>
 </div>
