--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,11 @@
 <footer class="footer">
   <small>
-
+    <a href="https://sheltered-ravine-9581.herokuapp.com/">evaLect</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
-
-
+      <li><a href="http://www.hs-mannheim.de/">HsMannheim</a></li>
     </ul>
   </nav>
 </footer>
