--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,30 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app",root_path, id: "logo" %>
+    <%= link_to "evaLect", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav pull-right">
-        <li><%= link_to "Home",   root_path %></li>
-        <li><%= link_to "Help",   help_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Startseite", root_path %></li>
+        <li><%= link_to "Hilfe", help_path %></li>
+        <% if logged_in? %>
+            <% if current_user.admin? %>
+                <li><%= link_to "Benutzer", users_path %></li>
+            <% end %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profil anzeigen", current_user %></li>
+                <li><%= link_to "Profil Einstellungen", edit_user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "Ausloggen", logout_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
+        <% else %>
+            <li><%= link_to "Einloggen", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
