--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,12 @@
 <div class="center jumbotron">
-  <h1>Welcome to EvaLect</h1>
+  <h1>Welcome to EvaLect!</h1>
 
   <h2>
-   Die einfache Art der Evaluation von Vorlesungen per Webapp.
+    Evaluation von Vorlesungen per Webapp! ;)
   </h2>
 
-  <%= link_to "Anmelden!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Registrieren!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
-
+<h3>Powered by</h3>
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
             'http://rubyonrails.org/' %>
