Es geht vorran!
Rapidfire Gem hinzugefügt ( editor zum Umfragen erstellen)  und die die
main_app eingepflegt. als admin_user:true sieht man die schaltfläche
"evaluationen"  und kann verschiedene fragebögen unter verschiedenen
grupppen anlegen! nice

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
     Evaluation von Vorlesungen per Webapp! ;)
   </h2>
 
-  <%= link_to "Registrieren!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Registrieren!", main_app.signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <h6>Powered by</h6>
