--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   about_path %></li>
+      <li><%= link_to "About",   main_app.about_path %></li>
       <li><a href="http://www.hs-mannheim.de/">HsMannheim</a></li>
     </ul>
   </nav>
