--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="https://sheltered-ravine-9581.herokuapp.com/">evaLect</a>
+    <a href="https://morning-oasis-7374.herokuapp.com/">evaLect</a>
   </small>
   <nav>
     <ul>
