--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,5 +2,11 @@
 <h1>Hilfe</h1>
 <p>
   Grundlegende informationen im Umgang mit EvaLect!:
+<ol>
+  <li>Zuerst eine Gruppe für die Fragen erstellen</li>
+  <li>Dann in der jeweiligen Gruppe Fragen erstellen</li>
+  <li>Sollt ja nicht so schwer sein...;)</li>
+</ol>
+
 
 </p>
