--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,9 @@
         <li><%= link_to "Startseite", main_app.root_path %></li>
         <li><%= link_to "Hilfe", main_app.help_path %></li>
         <% if logged_in? %>
+            <li><%= link_to "Evaluationen", rapidfire.root_path  %></li>
             <% if current_user.admin? %>
-                <li><%= link_to "Evaluationen", rapidfire.root_path  %></li>
-                <li><%= link_to "Benutzer", main_app.users_path %></li>
+                <li><%= link_to "Adminbereich", main_app.users_path %></li>
             <% end %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
