genug für heute =P

--- a/app/views/rapidfire/answer_groups/new.html.erb
+++ b/app/views/rapidfire/answer_groups/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 
-<h2>Please answer these Questions</h2>
+<h2>Bitte füllen sie folgende evulation aus:</h2>
 <hr/>
 
 <%= form_for([@question_group, @answer_group_builder]) do |f| %>
@@ -10,7 +10,7 @@
     <% end %>
         <br>
   <% end %>
-  <%= f.submit "Save" %>
+  <%= f.submit "Abschicken" %>
 <% end %>
 
 </div>
