--- a/app/views/rapidfire/questions/index.html.erb
+++ b/app/views/rapidfire/questions/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
 
 <h2>
-  Questions
-  <%= link_to "New Question", new_question_group_question_path(@question_group) %>
+  Fragen:
 </h2>
+  <%= link_to "Neue Frage erstellen", new_question_group_question_path(@question_group) %>
 <hr/>
 
 <table>
