--- a/app/views/rapidfire/question_groups/_form.html.erb
+++ b/app/views/rapidfire/question_groups/_form.html.erb
@@ -1,4 +1,4 @@
-<h3><%= question_group.new_record? ? "New Group" : "Edit Group" %></h3>
+<h2><%= question_group.new_record? ? "Neue Evaluation erstellen" : "Edit Group" %></h2>
 
 <%= form_for question_group do |f| %>
   <%- if question_group.errors.any? %>
