--- a/app/views/rapidfire/question_groups/_question_group.html.erb
+++ b/app/views/rapidfire/question_groups/_question_group.html.erb
@@ -8,10 +8,10 @@
   </td>
   <td>
     <ul class="horizontal-list">
-      <li><%= link_to "Answer Questions", new_question_group_answer_group_path(question_group) %></li>
+      <li><%= link_to "Evaluation ausfüllen", new_question_group_answer_group_path(question_group) %></li>
       <% if can_administer? %>
-        <li><%= link_to "Results", [:results, question_group] %></li>
-        <li><%= link_to "Delete", [question_group], method: :delete %></li>
+        <li><%= link_to "Ergebnis", [:results, question_group] %></li>
+        <li><%= link_to "Löschen", [question_group], method: :delete %></li>
       <% end %>
     </ul>
   </td>
