--- a/app/views/rapidfire/questions/_form.html.erb
+++ b/app/views/rapidfire/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<h3>Question</h3>
+<h3>Frage</h3>
 
 <%= form_for [@question_group, question] do |f| %>
   <%- unless question.errors.empty? %>
@@ -18,7 +18,7 @@
   <%= f.label :answer_options %>
   <%= f.text_area :answer_options, rows: 5 %>
 
-  <h4>Other options</h4>
+  <h4>Weiter Optionen</h4>
   <hr/>
 
   <%= f.label :answer_presence %>
