--- a/app/views/rapidfire/questions/_question.html.erb
+++ b/app/views/rapidfire/questions/_question.html.erb
@@ -3,7 +3,7 @@
   <td>
     <ul class="horizontal-list">
       <li><%= link_to "Edit", [:edit, question.question_group, question] %></li>
-      <li><%= link_to "Delete", [question.question_group, question], method: :delete %></li>
+      <li><%= link_to "Löschen", [question.question_group, question], method: :delete %></li>
     </ul>
   </td>
 </tr>
