--- a/app/views/rapidfire/answer_groups/new.html.erb
+++ b/app/views/rapidfire/answer_groups/new.html.erb
@@ -1,12 +1,13 @@
 <div class="row">
 
-<h2>Bitte füllen sie folgende evulation aus:</h2>
+<h2>Bitte füllen sie folgende Evaulation aus:</h2>
 <hr/>
 
 <%= form_for([@question_group, @answer_group_builder]) do |f| %>
   <%- @answer_group_builder.answers.each do |answer| %>
     <%= f.fields_for("#{answer.question.id}", answer) do |answer_form| %>
       <%= render_answer_form_helper(answer, answer_form) %>
+              <br>
     <% end %>
         <br>
   <% end %>
