--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   <nav>
     <ul>
       <li><%= link_to "About", main_app.about_path %></li>
-      <li><a href="http://www.hs-mannheim.de/">HsMannheim</a></li>
+      <li><a href="http://www.hs-mannheim.de/">HS-Mannheim</a></li>
     </ul>
   </nav>
 </footer>
