--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="center jumbotron">
-  <h1>Welcome to EvaLect!</h1>
+  <h1>Welcome to Evalect!</h1>
 
   <h2>
-    Evaluation von Vorlesungen per Webapp! ;)
+    Evaluation von Vorlesungen per Webapp!
   </h2>
 
   <%= link_to "Registrieren!", main_app.signup_path, class: "btn btn-lg btn-primary" %>
