--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,11 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <h1>
+      <h1>User-Profil:</h1>
+      <h2>
         <%= gravatar_for @user %>
         <%= @user.name %>
-      </h1>
+      </h2>
     </section>
   </aside>
 </div>
