done bugfixes and mostly all translations... think we have finished. official release v1.0 ;)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -206,3 +206,17 @@ input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+/* rapidfire  */
+
+.rapidfire {
+
+
+  margin: 25px;
+
+#result{
+  text-indent: 50px
+
+}
+
+}
