--- a/app/views/rapidfire/question_groups/results.html.erb
+++ b/app/views/rapidfire/question_groups/results.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="rapidfire">
 
-  <h1>Ergebnis:</h1>
+  <h2>Auswertung ihrer Evulation:</h2>
 
   <%- @question_group_results.each do |result| %>
       <div>
@@ -18,14 +18,14 @@
               <thead>
               <tr>
                 <th>Option</th>
-                <th>Count</th>
+                <th id ="result">Anzahl</th>
               </tr>
               </thead>
               <tbody>
               <%- result.results.each do |option, count| %>
                   <tr>
                     <td><%= option %></td>
-                    <td><%= count %></td>
+                    <td id ="result"><%= count %></td>
                   </tr>
               <% end %>
               </tbody>
