--- a/app/views/rapidfire/questions/_form.html.erb
+++ b/app/views/rapidfire/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<h3>Frage</h3>
+<h3>Frage erstellen</h3>
 
 <%= form_for [@question_group, question] do |f| %>
     <%- unless question.errors.empty? %>
@@ -9,32 +9,28 @@
         </ul>
     <% end %>
 
-    <%= f.label :type %>
+    <%= f.label :type, "Fragetyp (siehe Hilfe)" %>
     <%= f.select :type, ::Rapidfire::QuestionForm::QUESTION_TYPES, {}, id: "question_type" %>
 
-    <%= f.label :question_text %>
+    <%= f.label :question_text, "Fragetext" %>
     <%= f.text_field :question_text %>
 
-    <%= f.label :answer_options %>
+    <%= f.label :answer_options, "Antwortsoptionen (für jede Option eine neue Zeile bitte)" %>
     <%= f.text_area :answer_options, rows: 5 %>
 
-    <h4>Weiter Optionen</h4>
+    <h4>Zusätzliche Optionen</h4>
     <hr/>
 
-    <%= f.label :answer_presence %>
+    <%= f.label :answer_presence, "Antwortpräsenz verlangen (Haken)" %>
     <%= f.check_box :answer_presence %>
 
-    <%= f.label :answer_minimum_length %>
+    <%= f.label :answer_minimum_length, "Minimale länge der Antwort" %>
     <%= f.text_field :answer_minimum_length %>
 
-    <%= f.label :answer_maximum_length %>
+    <%= f.label :answer_maximum_length, "Maximale länge der Antwort" %>
     <%= f.text_field :answer_maximum_length %>
 
-    <%= f.label :answer_greater_than_or_equal_to %>
-    <%= f.text_field :answer_greater_than_or_equal_to %>
 
-    <%= f.label :answer_less_than_or_equal_to %>
-    <%= f.text_field :answer_less_than_or_equal_to %>
 
     <%= f.submit %>
 <% end %>
