--- a/app/views/rapidfire/question_groups/results.html.erb
+++ b/app/views/rapidfire/question_groups/results.html.erb
@@ -1,6 +1,6 @@
 <div class="rapidfire">
 
-  <h2>Auswertung ihrer Evulation:</h2>
+  <h2>Auswertung ihrer Evaluation:</h2>
 
   <%- @question_group_results.each do |result| %>
       <div>
