--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -209,14 +209,20 @@ input {
 
 /* rapidfire  */
 
-.rapidfire {
-
-
-  margin: 25px;
-
-#result{
-  text-indent: 50px
-
+.horizontal-list {
+  list-style: none;
 }
 
+.horizontal-list > li {
+  float: left;
+  display: inline;
+  margin: 0px 5px;
+}
+
+.github-ribbon {
+  position: fixed;
+  right:  0;
+  top:    0;
+  border: 0;
+  z-index: 2000;
 }
