--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, "About") %>
 <h1>IMB3 Web-Anwendungen Projekt: "EvaLect"</h1>
 <p>
-<ul>
-  <BLOCKQUOTE>Aufgabe: Umsetzung der Anwendung mit gewählter Technologie demonstrieren</BLOCKQUOTE>
-  <BLOCKQUOTE>Projekt: Evaluation von Vorlesungen im Web</BLOCKQUOTE>
-  <BLOCKQUOTE>Technik: Ruby on Rails</BLOCKQUOTE>
-  <BLOCKQUOTE>Authoren: Michelle H. Tim H. Axel D. Torsten M.</BLOCKQUOTE>
-</ul>
+<ol>
+  <li><strong>Aufgabe:</strong> Umsetzung der Anwendung mit gewählter Technologie demonstrieren</li>
+  <li><strong>Projekt:</strong> Evaluation von Vorlesungen im Web</li>
+  <li><strong>Technik:</strong> Ruby on Rails</li>
+  <li><strong>Beteiligte:</strong> Michelle H. Tim H. Axel D. Torsten M.</li>
+</ol>
 </p>
