--- a/app/views/rapidfire/answers/_select.html.haml
+++ b/app/views/rapidfire/answers/_select.html.haml
@@ -1,2 +1,2 @@
 = f.input :answer_text, collection: answer.question.options, include_blank: true,
-  label: answer.question.question_text, prompt: "Please select"
+  label: answer.question.question_text, prompt: "Bitte auswählen"
