--- a/app/views/rapidfire/questions/_form.html.haml
+++ b/app/views/rapidfire/questions/_form.html.haml
@@ -4,9 +4,9 @@
   .row-fluid
     .span5
       = f.input :type, collection: Rapidfire::QuestionForm::QUESTION_TYPES,
-        include_blank: false, input_html: { class: "input-xlarge" }
-      = f.input :question_text, input_html: { class: "input-xlarge" }
-      = f.input :answer_options, as: :text, input_html: { rows: 4, class: "input-xlarge" }
+        include_blank: false, input_html: { class: "input-xlarge" }, label: "Fragentyp"
+      = f.input :question_text, input_html: { class: "input-xlarge" }, label: "Aktuelle Frage:"
+      = f.input :answer_options, as: :text, input_html: { rows: 4, class: "input-xlarge" }, label: "Antwort-Optionen (Bitte jede Option in eine extra Zeile)"
 
     .span6
       %h4
@@ -16,14 +16,14 @@
       = f.input :answer_presence, as: :boolean
       .row-fluid
         .span6
-          = f.input :answer_minimum_length
+          = f.input :answer_minimum_length, label: "Minimale länge der Antwort"
         .span6
-          = f.input :answer_maximum_length
+          = f.input :answer_maximum_length, label: "Maximale länge der Antwort"
       .row-fluid
         .span6
-          = f.input :answer_greater_than_or_equal_to
+          = f.input :answer_greater_than_or_equal_to, label: "Antwort größer als oder gleich zu"
         .span6
-          = f.input :answer_less_than_or_equal_to
+          = f.input :answer_less_than_or_equal_to, label: "Antwort ist kleiner als oder gleich zu"
 
   %hr
   = f.submit "Erstellen", class: "btn btn-primary btn-large"
