--- a/app/views/rapidfire/questions/_form.html.haml
+++ b/app/views/rapidfire/questions/_form.html.haml
@@ -21,9 +21,9 @@
           = f.input :answer_maximum_length, label: "Maximale länge der Antwort"
       .row-fluid
         .span6
-          = f.input :answer_greater_than_or_equal_to, label: "Antwort größer als oder gleich zu"
+          = f.input :answer_greater_than_or_equal_to, label: "Antwort größer als oder gleich"
         .span6
-          = f.input :answer_less_than_or_equal_to, label: "Antwort ist kleiner als oder gleich zu"
+          = f.input :answer_less_than_or_equal_to, label: "Antwort ist kleiner als oder gleich"
 
   %hr
   = f.submit "Erstellen", class: "btn btn-primary btn-large"
